# agent-control-room

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt
app/: config.py  deps.py  main.py
app/agents/: critic.py  generator.py  orchestrator.py  state.py
app/api/: routes.py
app/core/: divergence.py  embeddings.py  metrics.py  reframe.py  registry.py  synthesis.py  textproc.py
app/database/: clickhouse_client.py
app/services/: airbyte_client.py  composio_client.py  truefoundry_client.py
dashboard/: index.html
scripts/: demo.py
tests/: conftest.py  test_agents.py  test_api.py  test_divergence.py  test_metrics_sql.py  test_pipeline_e2e.py  test_reframe.py
